--- a/GSP1077.md
+++ b/GSP1077.md
@@ -6,11 +6,20 @@ Run the following commands in the cloud shell terminal.
 ## Task 1. Initialize Your Lab
 
 ```cmd
+export PROJECT_ID=$(gcloud config get-value project)
+export PROJECT_NUMBER=$(gcloud projects describe $PROJECT_ID --format='value(projectNumber)')
+export REGION=us-central1
+gcloud config set compute/region $REGION
+
+```
+```cmd
 gcloud services enable container.googleapis.com \
     cloudbuild.googleapis.com \
     sourcerepo.googleapis.com \
     containeranalysis.googleapis.com
+```
 
+```
 gcloud artifacts repositories create my-repository \
   --repository-format=docker \
   --location=$REGION
