Added yt solution link

--- a/GSP1077.md
+++ b/GSP1077.md
@@ -1,6 +1,7 @@
 ## `Lab Name` - *Google Kubernetes Engine Pipeline using Cloud Build [GSP1077]*
 ## `Lab Link` - [Click Here](https://www.cloudskillsboost.google/focuses/52829?parent=catalog)
 
+## [YouTube Video Solution Link](https://youtu.be/lhrRboZsl3Q)
 Run the following commands in the cloud shell terminal.
 
 ## Task 1. Initialize Your Lab
